force-app/main/default/objects/DEPT__c/DEPT__c.object-meta.xml
<CustomObject>
    <label>DEPT</label>
    <nameField>
        <label>DEPT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEPTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>