force-app/main/default/objects/DEPT__c/fields/DEPT__c.field-meta.xml
<CustomField>
    <fullName>DEPT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPT</label>
    <referenceTo>DEPT__c</referenceTo>
    <relationshipLabel>DEPTS</relationshipLabel>
    <relationshipName>DEPTS</relationshipName>
    <type>Lookup</type>
</CustomField>