force-app/main/default/objects/DEPT__c/fields/DEPTID__c.field-meta.xml
<CustomField>
    <fullName>DEPTID__c</fullName>
    <label>DEPTID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>