force-app/main/default/objects/DEPT__c/fields/DEPTPHONE__c.field-meta.xml
<CustomField>
    <fullName>DEPTPHONE__c</fullName>
    <label>DEPTPHONE</label>
    <type>Phone</type>
</CustomField>