force-app/main/default/objects/DEPT__c/fields/EMP__c.field-meta.xml
<CustomField>
    <fullName>EMP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMP</label>
    <referenceTo>EMP__c</referenceTo>
    <relationshipLabel>DEPTS</relationshipLabel>
    <relationshipName>DEPTS</relationshipName>
    <type>Lookup</type>
</CustomField>