force-app/main/default/objects/DEPT__c/fields/EMP_ID_1__c.field-meta.xml
<CustomField>
    <fullName>EMP_ID_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMP ID_1</label>
    <referenceTo>DEPT__c</referenceTo>
    <relationshipLabel>DEPTS (EMP ID)</relationshipLabel>
    <relationshipName>DEPTS1</relationshipName>
    <type>Lookup</type>
</CustomField>