force-app/main/default/objects/DEPT__c/fields/EMP_ID__c.field-meta.xml
<CustomField>
    <fullName>EMP_ID__c</fullName>
    <label>EMP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>